--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav class="fill">
             <ul>
                 <li><a href="#">GUI ЧАТ</a></li>
-                <li><a href="#section2">СКАЧАТЬ</a></li>
+                <li><a href="#">СКАЧАТЬ</a></li>
                 <li><a href="#">КОНТАКТЫ</a></li>
             </ul>
         </nav>
         <div class="title">
-            <h1>GUI чат - шаг к удобству</h1>
-            <p>Вы скажете:"Зачем этот чат,если есть другие мессенджеры?" Я вам отвечу:<br>
+            <h1 class="wow fadeInLeft" data-wow-duration="1s">GUI чат - шаг к удобству</h1>
+            <p class="wow fadeInLeft" data-wow-delay="0.3s" data-wow-duration="1s">Вы скажете: "Зачем этот чат, если есть другие мессенджеры?" Я вам отвечу:<br>
             "А зачем создавать другие мессенджеры: Вконтакте, Однокласники, и т.д, если они уже есть?"<br>
             Я создавал этот проект не только для себя,но и для общества людей,которые хотят развиваться.<br>
             Этот проект развивается благодаря пользователям,ведь пользователь знает как нужно.</p>
@@ -35,13 +35,16 @@
 
 
 
-    <section class="test" id="section2">
+    <section class="test">
 
     </section>
 </div>
 <script src="https://kit.fontawesome.com/6dd1c1f9d3.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="script/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 <script type="text/javascript" src="script/jquery.fullpage.js"></script>
 <script type="text/javascript" src="script/main.js"></script>
 </body>
